# inflat-rs

./: .gitignore  Cargo.toml  README.md  a.out  run_tests.py
papers/gb/: .latexmkrc  main.tex  refs.bib
pylat/: backend.py  compile.py  expr.py  jit.py  llvm.py  notes.typ  proca.py  scalar.py  scope.py  tests.py  util.py
pylat/jit/: argpass.py  backend.py  compile.py  helper.py  ir.py  llvm.py  openmp.py  typed.py  typed_expr.py  util.py
scripts/: plot-gb.ipynb  plot-gb.py
src/: background.rs  c2fn.rs  fft.rs  field.rs  gauss_bonnet.rs  igw.rs  lat.rs  lib.rs  models.rs  scalar.rs  util.rs  wl.rs
src/ndarray/: array.rs  mod.rs  ndarray.rs  par_iter.rs
