[package]
name = "inflat"
version = "0.1.0"
edition = "2024"

[dependencies]
dft = "0.5.5"
libm = "0.2.11"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
num-traits = "0.2.19"
plotly = { version = "0.12.1", features = ["plotly_ndarray"] }
rayon = "1.10.0"

[lib]
name = "inflat"
path = "src/lib.rs"

[[bin]]
name = "reproducings"
path = "src/bin/reproducings.rs"
