[package]
name = "inflat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
libm = "0.2.11"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-npy = { version = "0.9.1", features = ["compressed_npz"] }
num-complex = "0.4.6"
num-traits = "0.2.19"
plotly = { version = "0.12.1", features = ["plotly_ndarray"] }
random = "0.14.0"
rayon = "1.10.0"
rustfft = "6.2.0"

[build]
rustflags = ["-C", "target-cpu=native"]

[lib]
name = "inflat"
path = "src/lib.rs"

[[bin]]
name = "scalar_lat"
path = "src/bin/scalar_lat.rs"

[[bin]]
name = "parameter-resonance"
path = "src/bin/parameter-resonance.rs"

[[bin]]
name = "nymtg"
path = "src/bin/nymtg.rs"

[[bin]]
name = "nymtg2"
path = "src/bin/nymtg2.rs"

[[bin]]
name = "dcs"
path = "src/bin/dcs.rs"

[[bin]]
name = "binytg"
path = "src/bin/binytg.rs"

[[bin]]
name = "gauss_bonnet"
path = "src/bin/gauss_bonnet.rs"
